k8s/base/congen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: congen
  namespace: congen
  labels:
    app: congen
spec:
  selector:
    app: congen
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
