k8s/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: congen
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
